// Copyright (c) Microsoft. All rights reserved.

syntax = "proto3";
package Microsoft.CGC.DataAccess.GRPC;

message AddOrUpdateEntityResponse
{
    bool AddedOrUpdated = 1;
    string EntityId = 2;
}

message GetEntityRequest
{
    repeated string EntityIds = 1;
    string CreatedByUser = 2;
}

message Request
{
    string a = 1;
}

message Response
{
    string b = 1;
}

service WorkflowService
{
    rpc Fun (Request) returns (Response);
    // rpc AddModule (Module) returns (AddOrUpdateEntityResponse);
    // rpc GetModule (GetEntityRequest) returns (GetModuleResponse);
    // rpc AddJob (Job) returns (AddOrUpdateEntityResponse);
    // rpc GetJob (GetEntityRequest) returns (GetJobResponse);
}